# super-resolution

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md
instructions/: install_linux_no_root.txt  known_issues.md
scripts/: image_to_ftir.py  run.py  test_matrices.py
source/: super_resolution.cpp
src/: data_generator.cpp  data_generator.h  generate_data.cpp  shift_add_fusion.cpp  super_resolution.cpp  visualize_image.cpp
src/data_generator/: data_generator.cpp  data_generator.h  generate_data.cpp  motion_shift.cpp  motion_shift.h
src/evaluation/: evaluator.h  ground_truth_evaluator.h  peak_signal_to_noise_ratio.cpp  peak_signal_to_noise_ratio.h  structural_similarity.cpp  structural_similarity.h
src/ftir/: data_loader.cpp  data_loader.h
src/hyperspectral/: data_loader.cpp  data_loader.h  hyperspectral_data_loader.cpp  hyperspectral_data_loader.h  spectral_pca.cpp  spectral_pca.h
src/image/: image_data.cpp  image_data.h
src/image_model/: additive_noise_module.cpp  additive_noise_module.h  blur_module.cpp  blur_module.h  degradation_operator.cpp  degradation_operator.h  downsampling_module.cpp  downsampling_module.h  image_model.cpp  image_model.h  motion_module.cpp  motion_module.h  psf_blur_module.cpp  psf_blur_module.h
src/motion/: motion_shift.cpp  motion_shift.h  registration.cpp  registration.h
src/optimization/: admm_solver.cpp  admm_solver.h  alglib_irls_objective.cpp  alglib_irls_objective.h  alglib_objective.cpp  alglib_objective.h  btv_regularizer.cpp  btv_regularizer.h  irls_map_solver.cpp  irls_map_solver.h  map_solver.cpp  map_solver.h  objective_data_term.cpp  objective_data_term.h  objective_function.cpp  objective_function.h  objective_irls_regularization_term.cpp  objective_irls_regularization_term.h  regularizer.h  solver.h  tv_regularizer.cpp  tv_regularizer.h
src/solvers/: alglib_irls_objective.cpp  alglib_irls_objective.h  alglib_objective.cpp  alglib_objective.h  ceres_objective.h  irls_cost_processor.cpp  irls_cost_processor.h  irls_map_solver.cpp  irls_map_solver.h  map_cost_function.h  map_cost_functor.h  map_cost_processor.cpp  map_cost_processor.h  map_data_cost_functor.h  map_regularization_cost_functor.h  map_solver.cpp  map_solver.h  regularizer.cpp  regularizer.h  solver.h  super_resolution_map.cpp  super_resolution_map.h  tv_regularizer.cpp  tv_regularizer.h
src/solvers/scrap/: irls_cost_processor.cpp  map_solver.h
src/util/: config_reader.cpp  config_reader.h  data_loader.cpp  data_loader.h  macros.h  matrix_util.cpp  matrix_util.h  string_util.cpp  string_util.h  test_util.cpp  test_util.h  util.cpp  util.h  visualization.cpp  visualization.h
src/video/: data_generator.cpp  data_generator.h  motion_shift.cpp  motion_shift.h  super_resolver.cpp  super_resolver.h  video_loader.cpp  video_loader.h
src/wavelet/: wavelet_transform.cpp  wavelet_transform.h
test/: test_btv_regularizer.cpp  test_data_generator.cpp  test_evaluation.cpp  test_ftir_data_loader.cpp  test_hyperspectral_data_loader.cpp  test_image_data.cpp  test_image_model.cpp  test_irls_cost_processor.cpp  test_map_cost_processor.cpp  test_map_solver.cpp  test_registration.cpp  test_spectral_pca.cpp  test_tv_regularizer.cpp  test_util.cpp  test_wavelet_transform.cpp
test_data/: example_envi_data  example_envi_header.hdr  ftir_test.txt  test_hs_config.txt  test_motion_sequence_4.txt
test_data/test_tmp_dir/: README.txt
